@@ -24,6 +24,7 @@ import com.bakdata.conquery.models.query.queryplan.QueryPlan;
 import com.bakdata.conquery.models.query.results.EntityResult;
 import com.bakdata.conquery.models.query.results.ShardResult;
 import com.bakdata.conquery.models.worker.Worker;
+import com.google.common.base.Stopwatch;
 import com.google.common.util.concurrent.MoreExecutors;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
@@ -40,6 +41,7 @@ public class QueryExecutor implements Closeable {
 
 	private final Set<ManagedExecutionId> cancelledQueries = new HashSet<>();
 
+
 	public void unsetQueryCancelled(ManagedExecutionId query) {
 		cancelledQueries.remove(query);
 	}
@@ -54,10 +56,16 @@ public class QueryExecutor implements Closeable {
 
 	public boolean execute(Query query, QueryExecutionContext executionContext, ShardResult result, Set<Entity> entities) {
 
-		final ThreadLocal<QueryPlan<?>> plan = ThreadLocal.withInitial(() -> query.createQueryPlan(new QueryPlanContext(worker, secondaryIdSubPlanLimit)));
+		log.info("Received query: {}", query);
+
+		Stopwatch stopwatch = Stopwatch.createStarted();
+		final ThreadLocal<QueryPlan<?>> plan =
+				ThreadLocal.withInitial(() -> query.createQueryPlan(new QueryPlanContext(executionContext.getStorage(), secondaryIdSubPlanLimit)));
+		log.trace("Created query plan in {}", stopwatch);
 
 		if (entities.isEmpty()) {
-			log.warn("Entities for query are empty");
+			// This is quite common for the entity preview, as only single entities are requested
+			log.trace("Entities for query are empty");
 		}
 
 		try {
@@ -67,17 +75,11 @@ public class QueryExecutor implements Closeable {
 			}
 
 			final List<CompletableFuture<Optional<EntityResult>>> futures =
-					entities.stream()
-							.map(entity -> new QueryJob(executionContext, plan, entity))
-							.map(job -> CompletableFuture.supplyAsync(job, executor))
-							.collect(Collectors.toList());
+					entities.stream().map(entity -> new QueryJob(executionContext, plan, entity)).map(job -> CompletableFuture.supplyAsync(job, executor)).toList();
 
 			final CompletableFuture<Void> allDone = CompletableFuture.allOf(futures.toArray(CompletableFuture[]::new));
 
-			allDone.thenApply((ignored) -> futures.stream()
-												  .map(CompletableFuture::join)
-												  .flatMap(Optional::stream)
-												  .collect(Collectors.toList()))
+			allDone.thenApply((ignored) -> futures.stream().map(CompletableFuture::join).flatMap(Optional::stream).collect(Collectors.toList()))
 				   .whenComplete((results, exc) -> result.finish(Objects.requireNonNullElse(results, Collections.emptyList()), Optional.ofNullable(exc), worker));
 
 
@@ -86,12 +88,12 @@ public class QueryExecutor implements Closeable {
 		catch (Exception e) {
 			ConqueryError err = asConqueryError(e);
 			log.warn("Error while executing {}", executionContext.getExecutionId(), err);
-			sendFailureToManagerNode(result, asConqueryError(err));
+			sendFailureToManagerNode(result, asConqueryError(err), worker);
 			return false;
 		}
 	}
 
-	public void sendFailureToManagerNode(ShardResult result, ConqueryError error) {
+	public void sendFailureToManagerNode(ShardResult result, ConqueryError error, Worker worker) {
 		result.finish(Collections.emptyList(), Optional.of(error), worker);
 	}
 
